#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([elf2d01],[1.0.0],[brijohn@gmail.com])
AC_CONFIG_SRCDIR([elf2d01.c])

AM_INIT_AUTOMAKE([1.10 foreign])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
